# adl1t_datamaker

./: .gitignore  Dockerfile  README.md  Snakefile  condaenv.yml  config.yaml  config_helper.py  converter.yml  crab.py  mc-run3-samples-list.txt  merge_h5_tuples.py  preprocess.py  pyproject.toml  requirements.txt  setup.cfg  worker.py
L1Trigger_data/h5convert/: README.md  plots.py  root2h5.py
L1Trigger_data/rootfile_generation/: README.md  bundler.py  mc_run3.py
docs/: L1FWneedsPbPb2018run.docx  README.md
h5convert/: README.md  convert_all.sh  plot  produce_h5  root2h5.py
l1trigger_datamaker/h5convert/: README.md  plots.py  root2h5.py
l1trigger_datamaker/h5convert/pileup_files/: run386554_brilcalc_PU
l1trigger_datamaker/rootfile_generation/: Snakefile  Snakefile-ZB  bundler.py  crab.py  mc_run3.py
level1trigger_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: pileup_vs_towers.ipynb  zero_values_analysis.ipynb
notebooks/.ipynb_checkpoints/: pileup_vs_towers-checkpoint.ipynb  zero_values_analysis-checkpoint.ipynb
privatemc-filelist/120X/: emj-mMed-1000_mDark-10_ctau-1-files.txt  emj-mMed-1000_mDark-10_ctau-150-files.txt  emj-mMed-800_mDark-10_ctau-0p1-files.txt  emj-mMed-800_mDark-10_ctau-1-files.txt  emj-mMed-800_mDark-10_ctau-150-files.txt  haa4b-ma15-powheg-FlatPU0To80.txt  haa4b-ma15-powheg.txt  haa4taus-ma15-powheg.txt
scripts/: README.md  convert  convert_folder  convert_run  plot  plot_comparison  plot_run  run.snip
scripts/L1Menus/: L1Menu_Collisions2025_v1_1_1.csv
scripts/configs/: convert.yaml
scripts/h5conversion/: convert_all.sh  convert_folder.sh  merge  plot  plot_all.sh  produce_h5  run.snip
scripts/h5convert/: convert_folder.sh  produce_h5
scripts/pileup_files/: run381148_brilcalc_PU  run381149_brilcalc_PU  run386593_brilcalc_PU  run392642_brilcalc_PU  run396102_brilcalc_PU  run398183_brilcalc_PU
scripts/rootfile_gen/: submit_mc_Run3.sh
src/adl1t_datamaker/: loader.py  plots.py  root2parquet.py  util.py
(+16 files in other folders)
