[project]
name = "adl1t-datamaker"
version = "1.0"
description = ""
authors = [
    {name = "AXOL1TL Collaboration",email = "podagiu@ethz.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py (>=3.13.0,<4.0.0)",
    "uproot (>=5.6.2,<6.0.0)",
    "awkward (>=2.8.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "rich (>=13.0.0,<15.0.0)",
    "pyarrow (>=21,<23)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "mplhep (>=0.4.1,<0.5.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
]

[tool.poetry]
packages = [{include = "adl1t_datamaker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
xrootd = [
    "fsspec-xrootd (>=0.5.1,<0.6.0)",
    "xrootd (>=5.9.1,<6.0.0)",
]
