[metadata]
name = level1trigger_data
version = attr: level1trigger_data.0.1
author = Patrick Odagiu
author_email = podagiu@ethz.ch
description = Process raw root data files recorded using the CMS detector into level 1 trigger root files. Emulate data to a specific set of conditions in the CMS detector. Convert the level 1 trigger root files into h5 files containing only information available in the global trigger, given some exceptions. The details of the h5 conversion process are found in the README.md in the h5convert folder.
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/bb511/L1Trigger_data
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude = 
    scripts*
